--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "mocha"
   },
   "repository": {
@@ -23,13 +24,22 @@
     "url": "https://github.com/mvromer/wds-middleware-use-vite/issues"
   },
   "homepage": "https://github.com/mvromer/wds-middleware-use-vite#readme",
+  "dependencies": {
+    "koa-connect": "^2.1.0"
+  },
   "devDependencies": {
+    "@types/koa": "^2.13.5",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
+  },
+  "peerDependencies": {
+    "vite": "3",
+    "@web/dev-server": "0.1"
   },
   "prettier": {
     "semi": true,
