--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wds-use-vite",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Web Dev Server middleware that uses Vite to transform and serve requests.",
   "type": "module",
   "main": "dist/index.js",
@@ -45,10 +45,10 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
     "typescript": "^4.9.3",
-    "vite": "^4.4.9"
+    "vite": "^6.0.0"
   },
   "peerDependencies": {
-    "vite": "3 || 4",
+    "vite": "3 || 4 || 5 || 6",
     "@web/dev-server": "0.1"
   },
   "prettier": {
