--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "peerDependencies": {
     "vite": "3 || 4 || 5 || 6",
-    "@web/dev-server": "0.1"
+    "@web/dev-server": "0.1 || 0.2 || 0.3 || 0.4"
   },
   "prettier": {
     "semi": true,
